# mini-projects

./: README.md
Elden Tree Event Handler/: CMakeLists.txt.txt  Elden Tree Event Handler.sln  Elden Tree Event Handler.vcxproj  Elden Tree Event Handler.vcxproj.filters  EldenTree.cpp  EldenTree.h  Event.cpp  Event.h  EventQueue.cpp.cpp  EventQueue.h  main.cpp  test_event_handler.cpp
Elden Tree Event Handler/x64/Debug/: Elden Tree Event Handler.exe.recipe  Elden Tree Event Handler.ilk  Elden Tree Event Handler.vcxproj.FileListAbsolute.txt  vc142.idb
Elden Tree Event Handler/x64/Debug/Elden Tr.74243949.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Elden Tree Event Handler.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Feilix-windows/: CMakeLists.txt  Feilix-windows.sln  Feilix-windows.vcxproj  Feilix-windows.vcxproj.filters  MatrixFixer.cpp  MatrixFixer.h  main.cpp
Feilix-windows/x64/Debug/: Feilix-windows.exe.recipe  Feilix-windows.ilk  Feilix-windows.vcxproj.FileListAbsolute.txt  vc142.idb
Feilix-windows/x64/Debug/Feilix-windows.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Feilix-windows.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Felix-linux/: CMakeLists.txt  Felix.sln  Felix.vcxproj  Felix.vcxproj.filters  felix.cpp  main.cpp  matrix.cpp  matrix.h  shared_memory.cpp  shared_memory.h  test_matrix.cpp  test_shared_memory.cpp
Felix-linux/x64/Debug/: vc142.idb
Felix-linux/x64/Debug/Felix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Felix.lastbuildstate
